Fix styling of sub filter buttons on mobile.

--- a/resources/assets/sass/_property-index.sass
+++ b/resources/assets/sass/_property-index.sass
@@ -71,6 +71,10 @@
     div
         margin-right: 10px
 
+        .filter
+            width:  100%
+            height: 100%
+
         &:last-of-type
             margin-right: 0px
 
@@ -107,3 +111,6 @@
 
             .single-property-wrapper
                 flex: 0 0 100%
+
+        #property-sub-filters .form-group
+            flex: 1
